[package]
name = "pallet-scheduler"
version = "4.0.0-dev"
authors.workspace = true
edition.workspace = true
license = "Apache-2.0"
homepage = "https://substrate.io"
repository.workspace = true
description = "FRAME Scheduler pallet"
readme = "README.md"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.1", default-features = false, features = ["derive"] }
log = { version = "0.4.17", default-features = false }
scale-info = { version = "2.10.0", default-features = false, features = ["derive"] }
frame-benchmarking = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "v1.4.0-rc1" , optional = true }
frame-support = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "v1.4.0-rc1" }
frame-system = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "v1.4.0-rc1" }
sp-io = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "v1.4.0-rc1" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "v1.4.0-rc1" }
sp-std = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "v1.4.0-rc1" }
sp-weights = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "v1.4.0-rc1" }
docify = "0.2.6"
pallet-etf-aura = { default-features = false, path = "../aura" }

[dev-dependencies]
pallet-preimage = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "v1.4.0-rc1" }
pallet-timestamp = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "v1.4.0-rc1" }
sp-core = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "v1.4.0-rc1" }
substrate-test-utils = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "v1.4.0-rc1" }
# etf-crypto-primitives = { git = "https://github.com/ideal-lab5/etf-sdk.git", branch = "main" }
ark-std = { version = "0.4.0", default-features = false }
ark-ff = { version = "0.4.0", default-features = false }
ark-poly = { version = "0.4.0", default-features = false }
ark-ec = { version = "0.4.0", default-features = false }
ark-serialize = { version = "0.4.0", default-features = false }
ark-bls12-381 = { version = "0.4.0", features = ["curve"], default-features = false }
ark-crypto-primitives = { version = "0.4.0", default-features = false, features = ["signature"] }
sp-consensus-etf-aura = { path = "../../primitives/consensus/aura" }
pallet-insecure-randomness-collective-flip = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "v1.4.0-rc1"  }
pallet-etf = { default-features = false, path = "../etf" }
rand_chacha = { version = "0.3.1", default-features = false }

[features]
default = [ "std" ]
runtime-benchmarks = [
	"frame-benchmarking",
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-preimage/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
std = [
	"codec/std",
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"log/std",
	"pallet-preimage/std",
	"scale-info/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
	"sp-weights/std",
	"pallet-etf-aura/std",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"pallet-preimage/try-runtime",
	"sp-runtime/try-runtime",
]
