[package]
name = "sp-keystore"
version = "0.34.0"
authors.workspace = true
edition.workspace = true
license = "Apache-2.0"
homepage = "https://substrate.io"
repository.workspace = true
description = "Keystore primitives."
documentation = "https://docs.rs/sp-core"

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.1", default-features = false, features = ["derive"] }
parking_lot = { version = "0.12.1", default-features = false, optional = true }
sp-core = { path = "../core", default-features = false }
sp-externalities = { git = "https://github.com/ideal-lab5/polkadot-sdk.git", branch = "dev", default-features = false }

[dev-dependencies]
rand = "0.8.5"
rand_chacha = "0.2.2"
w3f-bls = "0.1.3"
ark-serialize = "0.4.0"
ark-std = "0.4.0"
ark-ec = "0.4.0"
etf-crypto-primitives = { git = "https://github.com/ideal-lab5/etf-sdk/", branch = "w3fbls-migration" }

[features]
default = ["std"]
std = ["codec/std", "dep:parking_lot", "sp-core/std", "sp-externalities/std"]

# This feature adds BLS crypto primitives.
# It should not be used in production since the implementation and interface may still
# be subject to significant changes.
bls-experimental = ["sp-core/bls-experimental"]

# This feature adds Bandersnatch crypto primitives.
# It should not be used in production since the implementation and interface may still
# be subject to significant changes.
bandersnatch-experimental = ["sp-core/bandersnatch-experimental"]