[package]
name = "sc-consensus-etf-aura"
version = "0.10.0-dev"
authors = [
    "Ideal Labs <driemworks@idealabs.network>", 
    "Parity Technologies <admin@parity.io>"
]
description = "ETF Aura consensus algorithm for substrate"
edition = "2021"
license = "Apache-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/idea-lab5/etf/"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
ahash = "0.8.7"
async-trait = "0.1.57"
codec = { package = "parity-scale-codec", version = "3.2.2" }
futures = "0.3.21"
log = "0.4.17"
thiserror = "1.0"
ark-ec = { version = "0.4.0", default-features = false }
ark-bls12-381 = { version = "0.4.0", features = ["curve"], default-features = false }
ark-ff = { version = "0.4.0", default-features = false }
ark-serialize = { version = "0.4.0", default-features = false }
ark-std = { version = "0.4.0", default-features = false }
sha2 = { version = "0.10.2", default-features = false }
sha3 = { version = "0.10.0", default-features = false }
getrandom = { version = "0.2", default-features = false, features = ["js"] }
rand_chacha = { version = "0.3.1", default-features = false }
etf-crypto-primitives = { git = "https://github.com/ideal-lab5/etf-sdk/", branch = "dpss-noscale" }

prometheus-endpoint = { package = "substrate-prometheus-endpoint", version = "0.10.0-dev" }
sc-block-builder = { git = "https://github.com/paritytech/polkadot-sdk", tag = "v1.4.0-rc1", version = "0.10.0-dev" }
sc-client-api = { git = "https://github.com/paritytech/polkadot-sdk", tag = "v1.4.0-rc1", version = "4.0.0-dev" }
sc-consensus = { git = "https://github.com/paritytech/polkadot-sdk", tag = "v1.4.0-rc1", version = "0.10.0-dev" }
sc-consensus-slots = { git = "https://github.com/paritytech/polkadot-sdk", tag = "v1.4.0-rc1", version = "0.10.0-dev" }
sc-telemetry = { git = "https://github.com/paritytech/polkadot-sdk", tag = "v1.4.0-rc1", version = "4.0.0-dev" }
sp-api = { git = "https://github.com/paritytech/polkadot-sdk", tag = "v1.4.0-rc1", version = "4.0.0-dev" }
sp-application-crypto = { git = "https://github.com/paritytech/polkadot-sdk", tag = "v1.4.0-rc1", version = "23.0.0" }
sp-block-builder = { git = "https://github.com/paritytech/polkadot-sdk", tag = "v1.4.0-rc1" }
sp-blockchain = { git = "https://github.com/paritytech/polkadot-sdk", tag = "v1.4.0-rc1" }
sp-consensus = { git = "https://github.com/paritytech/polkadot-sdk", tag = "v1.4.0-rc1" }
sp-consensus-etf-aura = { path = "../../../primitives/consensus/aura" }
sp-consensus-slots = { git = "https://github.com/paritytech/polkadot-sdk", tag = "v1.4.0-rc1" }
sp-core = { git = "https://github.com/paritytech/polkadot-sdk", tag = "v1.4.0-rc1" }
sp-inherents = { git = "https://github.com/paritytech/polkadot-sdk", tag = "v1.4.0-rc1" }
sp-keystore = { git = "https://github.com/paritytech/polkadot-sdk", tag = "v1.4.0-rc1" }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk", tag = "v1.4.0-rc1" }

[dev-dependencies]
array-bytes = "6.1"
hex = "0.4.3"
parking_lot = "0.12.1"
tempfile = "3.1.0"
sc-keystore = { git = "https://github.com/paritytech/polkadot-sdk", tag = "v1.4.0-rc1" }
sc-network = { git = "https://github.com/paritytech/polkadot-sdk", tag = "v1.4.0-rc1" }
sc-network-etf-test = { path = "../../network/test" }
sp-keyring = { git = "https://github.com/paritytech/polkadot-sdk", tag = "v1.4.0-rc1" }
sp-timestamp = { git = "https://github.com/paritytech/polkadot-sdk", tag = "v1.4.0-rc1" }
sp-tracing = { git = "https://github.com/paritytech/polkadot-sdk", tag = "v1.4.0-rc1" }
substrate-etf-test-runtime-client = { path = "../../../test-utils/runtime/client" }
tokio = { version = "1.22.0" }
