[package]
name = "sc-consensus-beefy"
version = "13.0.0"
authors.workspace = true
edition.workspace = true
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
repository.workspace = true
description = "BEEFY Client gadget for substrate"
homepage = "https://substrate.io"

[lints]
workspace = true

[dependencies]
array-bytes = "6.1"
async-channel = "1.8.0"
async-trait = "0.1.74"
codec = { package = "parity-scale-codec", version = "3.6.1", features = ["derive"] }
fnv = "1.0.6"
futures = "0.3"
log = { workspace = true, default-features = true }
parking_lot = "0.12.1"
thiserror = { workspace = true }
wasm-timer = "0.2.5"
prometheus = { package = "substrate-prometheus-endpoint", git = "https://github.com/paritytech/polkadot-sdk.git", tag = "v1.9.0-rc1" }
sc-client-api = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "v1.9.0-rc1" }
sc-consensus = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "v1.9.0-rc1" }
sc-network = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "v1.9.0-rc1" }
sc-network-gossip = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "v1.9.0-rc1" }
sc-network-sync = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "v1.9.0-rc1" }
sc-utils = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "v1.9.0-rc1" }
sp-api = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "v1.9.0-rc1" }
sp-application-crypto = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "v1.9.0-rc1" }
sp-arithmetic = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "v1.9.0-rc1" }
sp-blockchain = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "v1.9.0-rc1" }
sp-consensus = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "v1.9.0-rc1" }
# sp-consensus-beefy = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "v1.9.0-rc1" }
sp-consensus-beefy = { path = "../../../primitives/consensus/beefy" }
sp-core = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "v1.9.0-rc1" }
sp-crypto-hashing = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "v1.9.0-rc1" }
sp-keystore = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "v1.9.0-rc1" }
sp-mmr-primitives = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "v1.9.0-rc1" }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "v1.9.0-rc1" }
tokio = "1.22.0"
etf-crypto-primitives = { path = "../../../../etf-sdk/etf-crypto-primitives" }
ark-std = { version = "0.4.0"}
rand = "0.8.5"
sp-ark-bls12-381 = { git = "https://github.com/paritytech/sp-curves.git" }


[dev-dependencies]
serde = { workspace = true, default-features = true }
tempfile = "3.1.0"
sc-block-builder = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "v1.9.0-rc1" }
sc-network-test = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "v1.9.0-rc1" }
sp-consensus-grandpa = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "v1.9.0-rc1" }
sp-keyring = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "v1.9.0-rc1" }
sp-tracing = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "v1.9.0-rc1" }
substrate-test-runtime-client = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "v1.9.0-rc1" }

[features]
# This feature adds BLS crypto primitives. It should not be used in production since
# the BLS implementation and interface may still be subject to significant change.
bls-experimental = [
	"sp-application-crypto/bls-experimental",
	"sp-consensus-beefy/bls-experimental",
	"sp-core/bls-experimental",
]
