[package]
description = "Integration tests for Substrate network protocol"
name = "sc-network-etf-test"
version = "0.8.0"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
authors.workspace = true
edition.workspace = true
publish = false
homepage = "https://substrate.io"
repository.workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
tokio = "1.22.0"
async-trait = "0.1.57"
futures = "0.3.21"
futures-timer = "3.0.1"
libp2p = "0.51.3"
log = "0.4.17"
parking_lot = "0.12.1"
rand = "0.8.5"
sc-block-builder = { git = "https://github.com/paritytech/polkadot-sdk", tag = "v1.4.0-rc1" }
sc-client-api = { git = "https://github.com/paritytech/polkadot-sdk", tag = "v1.4.0-rc1" }
sc-consensus = { git = "https://github.com/paritytech/polkadot-sdk", tag = "v1.4.0-rc1" }
sc-network = { git = "https://github.com/paritytech/polkadot-sdk", tag = "v1.4.0-rc1" }
sc-network-common = { git = "https://github.com/paritytech/polkadot-sdk", tag = "v1.4.0-rc1" }
sc-utils = { git = "https://github.com/paritytech/polkadot-sdk", tag = "v1.4.0-rc1" }
sc-network-light = { git = "https://github.com/paritytech/polkadot-sdk", tag = "v1.4.0-rc1" }
sc-network-sync = { git = "https://github.com/paritytech/polkadot-sdk", tag = "v1.4.0-rc1" }
sc-service = { git = "https://github.com/paritytech/polkadot-sdk", tag = "v1.4.0-rc1", default-features = false, features = ["test-helpers"]}
sp-blockchain = { git = "https://github.com/paritytech/polkadot-sdk", tag = "v1.4.0-rc1" }
sp-consensus = { git = "https://github.com/paritytech/polkadot-sdk", tag = "v1.4.0-rc1" }
sp-core = { git = "https://github.com/paritytech/polkadot-sdk", tag = "v1.4.0-rc1" }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk", tag = "v1.4.0-rc1" }
sp-tracing = { git = "https://github.com/paritytech/polkadot-sdk", tag = "v1.4.0-rc1" }
substrate-etf-test-runtime = { path = "../../../test-utils/runtime" }
substrate-etf-test-runtime-client = { path = "../../../test-utils/runtime/client" }
