[package]
description = "Integration tests for Substrate network protocol"
name = "sc-network-etf-test"
version = "0.8.0"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
authors.workspace = true
edition.workspace = true
publish = false
homepage = "https://substrate.io"
repository.workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
ahash = "0.8.7"
tokio = "1.22.0"
async-trait = "0.1.57"
futures = "0.3.21"
futures-timer = "3.0.1"
libp2p = "0.51.3"
log = "0.4.17"
parking_lot = "0.12.1"
rand = "0.8.5"
sc-block-builder = { git = "https://github.com/ideal-lab5/polkadot-sdk", branch = "tony/simd-update" }
sc-client-api = { git = "https://github.com/ideal-lab5/polkadot-sdk", branch = "tony/simd-update" }
sc-consensus = { git = "https://github.com/ideal-lab5/polkadot-sdk", branch = "tony/simd-update" }
sc-network = { git = "https://github.com/ideal-lab5/polkadot-sdk", branch = "tony/simd-update" }
sc-network-common = { git = "https://github.com/ideal-lab5/polkadot-sdk", branch = "tony/simd-update" }
sc-utils = { git = "https://github.com/ideal-lab5/polkadot-sdk", branch = "tony/simd-update" }
sc-network-light = { git = "https://github.com/ideal-lab5/polkadot-sdk", branch = "tony/simd-update" }
sc-network-sync = { git = "https://github.com/ideal-lab5/polkadot-sdk", branch = "tony/simd-update" }
sc-service = { git = "https://github.com/ideal-lab5/polkadot-sdk", branch = "tony/simd-update", default-features = false, features = ["test-helpers"]}
sp-blockchain = { git = "https://github.com/ideal-lab5/polkadot-sdk", branch = "tony/simd-update" }
sp-consensus = { git = "https://github.com/ideal-lab5/polkadot-sdk", branch = "tony/simd-update" }
sp-core = { git = "https://github.com/ideal-lab5/polkadot-sdk", branch = "tony/simd-update" }
sp-runtime = { git = "https://github.com/ideal-lab5/polkadot-sdk", branch = "tony/simd-update" }
sp-tracing = { git = "https://github.com/ideal-lab5/polkadot-sdk", branch = "tony/simd-update" }
substrate-etf-test-runtime = { path = "../../../test-utils/runtime" }
substrate-etf-test-runtime-client = { path = "../../../test-utils/runtime/client" }
