[package]
name = "substrate-etf-test-runtime-client"
version = "2.0.0"
authors.workspace = true
edition.workspace = true
license = "Apache-2.0"
homepage = "https://substrate.io"
repository.workspace = true
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
futures = "0.3.21"
sc-block-builder = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
sc-client-api = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
sc-consensus = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
sp-api = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
sp-blockchain = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
sp-consensus = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
sp-core = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
substrate-test-client = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
substrate-etf-test-runtime = { path = ".." }
