[package]
name = "substrate-etf-test-runtime-client"
version = "2.0.0"
authors.workspace = true
edition.workspace = true
license = "Apache-2.0"
homepage = "https://substrate.io"
repository.workspace = true
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
futures = "0.3.21"
sc-block-builder = { git = "https://github.com/paritytech/polkadot-sdk", tag = "v1.4.0-rc1" }
sc-client-api = { git = "https://github.com/paritytech/polkadot-sdk", tag = "v1.4.0-rc1" }
sc-consensus = { git = "https://github.com/paritytech/polkadot-sdk", tag = "v1.4.0-rc1" }
sp-api = { git = "https://github.com/paritytech/polkadot-sdk", tag = "v1.4.0-rc1" }
sp-blockchain = { git = "https://github.com/paritytech/polkadot-sdk", tag = "v1.4.0-rc1" }
sp-consensus = { git = "https://github.com/paritytech/polkadot-sdk", tag = "v1.4.0-rc1" }
sp-core = { git = "https://github.com/paritytech/polkadot-sdk", tag = "v1.4.0-rc1" }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk", tag = "v1.4.0-rc1" }
substrate-test-client = { git = "https://github.com/paritytech/polkadot-sdk", tag = "v1.4.0-rc1" }
substrate-etf-test-runtime = { path = ".." }
