[package]
name = "substrate-etf-test-runtime-client"
version = "2.0.0"
authors.workspace = true
edition.workspace = true
license = "Apache-2.0"
homepage = "https://substrate.io"
repository.workspace = true
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
futures = "0.3.21"
sc-block-builder = { git = "https://github.com/ideal-lab5/polkadot-sdk", branch = "tony/simd-update" }
sc-client-api = { git = "https://github.com/ideal-lab5/polkadot-sdk", branch = "tony/simd-update" }
sc-consensus = { git = "https://github.com/ideal-lab5/polkadot-sdk", branch = "tony/simd-update" }
sp-api = { git = "https://github.com/ideal-lab5/polkadot-sdk", branch = "tony/simd-update" }
sp-blockchain = { git = "https://github.com/ideal-lab5/polkadot-sdk", branch = "tony/simd-update" }
sp-consensus = { git = "https://github.com/ideal-lab5/polkadot-sdk", branch = "tony/simd-update" }
sp-core = { git = "https://github.com/ideal-lab5/polkadot-sdk", branch = "tony/simd-update" }
sp-runtime = { git = "https://github.com/ideal-lab5/polkadot-sdk", branch = "tony/simd-update" }
substrate-test-client = { git = "https://github.com/ideal-lab5/polkadot-sdk", branch = "tony/simd-update" }
substrate-etf-test-runtime = { path = ".." }
